deployment/stacks/application/base/template/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uec-sf-pc
  labels:
    ttl: K8S_TTL_TO_REPLACE
    project-group: PROJECT_GROUP_NAME_SHORT_TO_REPLACE
