deployment/stacks/application/base/template/service-alb.yaml
apiVersion: v1
kind: Service
metadata:
  name: uec-dos-api-pc-service
  namespace: uec-dos-api-pc
  labels:
    app: uec-dos-api-pc
spec:
  type: ClusterIP
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  selector:
    app: uec-dos-api-pc
