deployment/stacks/application/base/template/service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uec-dos-api-pc-ingress
  namespace: K8S_APP_NAMESPACE_TO_REPLACE
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health/readiness
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-port: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-policy: AWS_ALB_SSL_TLS_POLICY_TO_REPLACE
    alb.ingress.kubernetes.io/waf-acl-id: TEXAS_WAF_ACL_ID_TO_REPLACE
    alb.ingress.kubernetes.io/certificate-arn: AWS_CERTIFICATE_TO_REPLACE
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: Service=service-finder
  labels:
    app: uec-dos-api-pc

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uec-dos-api-pc-service
                port:
                  number: 443
